src/styles/AboutMe.css
.about-me__row {
  position: relative;
  min-height: 100vh;
}

/* Hero styles */
.hero-container {
  display: flex;
  height: 80%;
  align-items: center;
}
.hero-terminal {
  font-weight: 400;
}

/* About me bio */
.about-me__bio {
  display: flex;
  padding-top: 2rem;
  padding-bottom: 1rem;
  flex-direction: column;
  justify-content: center;
  width: clamp(35vw, 50rem, 100%);
  height: 100%;
  font-size: 1.2rem;
  line-height: 1.8;
}

.about-me__details {
  display: flex;
  padding-top: 0rem;
  padding-bottom: 3rem;
  flex-direction: column;
  justify-content: center;
  width: clamp(40vw, 50rem, 100%);
  height: 100%;
  font-size: 1.2rem;
  line-height: 1.8;
}

.text-size-placeholder {
  position: absolute;
  color: transparent;
  padding-top: 1rem;
  padding-bottom: 1rem;
  width: clamp(40vw, 50rem, 90vw);

  font-size: 1.2rem;
  line-height: 1.8;

  pointer-events: none;
  z-index: -1;
}

/* Job subtitle container */
.about-me__title {
  position: absolute;
  top: 44vh;
}
@media screen and (min-width: 768px) {
  .about-me__title {
    position: absolute;
    top: 45vh;
  }
}

@media screen and (min-width: 1200px) {
  .about-me__title {
    position: absolute;
    top: 45.5vh;
  }
}

.about-me__title h3 {
  font-weight: 200;
  font-size: clamp(23px, calc(25px + 1vw), 3vw);

  opacity: 0%;
  animation: LoadReducedMotion 1.15s ease-out 2.5s forwards;
}

.about-me__link {
  padding-left: 0.1rem;

  color: white;
  fill: white;
  font-size: clamp(15px, 1.5rem, 2vw);
  font-weight: 200;
  text-decoration: none;

  opacity: 0%;
  animation: LoadReducedMotion 1s ease-out 2.65s forwards;
}
.about-me__link div {
  vertical-align: middle;
  transition: color 0.1s ease-in, font-weight 0.1s ease-in;
}
.about-me__link svg {
  vertical-align: sub;
  transition: fill 0.1s ease-in;
}
.about-me__link:hover {
  font-weight: 400;
  color: rgba(var(--bs-link-color-rgb),var(--bs-link-opacity,1));
  fill: rgba(var(--bs-link-color-rgb),var(--bs-link-opacity,1));
}

@media (prefers-reduced-motion: no-preference) {
  .about-me__title h3, .about-me__link {
    transition: font-size 0.4s ease-in;
  }
  .about-me__title {
    transition: padding-left 0.4s ease-in, top 0.4s ease-in;
  }
}

/* Animations */
@keyframes LoadReducedMotion {
  0% {opacity: 0%;}
  100% {opacity: 100%;}
}

/* Transitions */

